# sim_ws

./: .gitignore  README.md
src/sim_utils/: README.md  package.xml  setup.cfg  setup.py
src/sim_utils/sim_utils/: red_ball_control.py
src/turtlebot3_gazebo/: CMakeLists.txt  README.md
src/turtlebot3_gazebo/launch/: mapper.launch.py  navigator.launch.py  turtlebot3_house.launch.py
src/turtlebot3_gazebo/maps/: map.pgm  map.yaml  sync_classroom_map.pgm  sync_classroom_map.yaml
src/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
src/turtlebot3_gazebo/params/: map_server.yaml  mapper_params_online_async.yaml
src/turtlebot3_gazebo/rviz/: tb3_gazebo.rviz
src/turtlebot3_gazebo/src/lab4/: dynamic_obstacles.py  task1.py  task2.py  task2_bonus.py  task3.py
src/turtlebot3_gazebo/src/turtlebot3_gazebo/: task1.py  task2.py  task2_bonus.py  task3.py
